Project/styles/mobile.css
@media only screen and (max-width: 780px) {
    :root {
        --primary-color: #0F172A;
        /*The main page background.*/
        --secondary-color: #F8FAFC;
        /*Main headings, body text.*/
        /* --accent1: #10B981; */
        --accent1: #34D399;
        /* Price Up percentages and successful "Buy" buttons.*/
        --accent2: #8B5CF6;
        /*Branding, call-to-action buttons, or active navigation links*/
        /* --accent3: #ff0000; */
        --accent3: #F87171;
        /* Price down */
    }

    header {
        display: flex;
        justify-content: space-between;
        flex-wrap: wrap;
        padding-right: .8rem;
        border-bottom: .3px solid var(--accent2);
        transition: 0.5s ease-in-out;
    }

    .ticker-head {
        padding-top: 1rem;
        flex-direction: column;
        align-items: flex-start;
    }

    .ticker-container {
        width: 100%;
    }

    .ticker-head strong {
        font-size: 1.2rem;
        padding: 0;
    }

    .logo-img {
        width: 70px;
        height: 70px;
    }
    
    .logo-text{
        font-size: 1.4rem;
    }

    input[type="search"] {
        display: none;
    }

    .navigation {
        display: none;
    }

    .hamburger {
        display: block;
        background: none;
        border: none;
        color: var(--primary-color);
        cursor: pointer;
    }

    .hamburger span,
    .hamburger::before,
    .hamburger::after {
        content: '';
        display: block;
        width: 25px;
        height: 2px;
        background-color: var(--accent2);
        margin: 5px 0;
        transition: 0.5s ease;

    }

    .hamburger.active::before {
        transform: rotate(45deg) translate(5px, 5px);
    }

    .hamburger.active span {
        opacity: 0;
    }

    .hamburger.active::after {
        transform: rotate(-45deg) translate(5px, -5px);
    }

    nav.open {
        display: flex;
        flex-direction: column;
        width: 100%;
        padding: 1rem;
        gap: 30px;
        /* border: .5px solid var(--accent2); */
        /* border-radius: 12px; */
    }

    nav .search {
        display: block;
    }

    header:has(nav.open) {
        border: none;
    }

    nav a {
        border-bottom: .5px solid var(--accent2);
        padding-bottom: 5px;
    }

    .todays-Mover {
        gap: 12px;
    }

    .top {
        min-height: 100px;
    }

    .top p{
        font-size: 20px;
    }

    .table-container {
        overflow-x: auto;
        position: relative;
    }

    table {
        width: 100%;
        border-collapse: separate;
        border-spacing: 0;
    }

    thead th {
        white-space: nowrap;
    }

    th:nth-child(3),
    td:nth-child(3),
    /* th:nth-child(5), */
    /* td:nth-child(5), */
    /* 24h */
    /* th:nth-child(6), */
    /* td:nth-child(6), */
    /* Market Cap */
    th:nth-child(7),
    td:nth-child(7),
    th:nth-child(8),
    td:nth-child(8)

    /* Volume */
        {
        display: none;
    }

    /* th:nth-child(1),
    td:nth-child(1) {
        position: sticky;
        left: 0;
        z-index: 2;
        min-width: 40px;
    }

    th:nth-child(2),
    td:nth-child(2) {
        position: sticky;
        left: 30px;
        z-index: 2;
    }

    thead th {
        position: sticky;
        top: 0;
        z-index: 3;

    }

    thead th:nth-child(1),
    thead th:nth-child(2) {
        z-index: 5;
    } */

    main {
        padding: 1rem;

    }

    footer{
        border-top: 1px solid grey;
        display: flex;
        flex-direction: column;
        justify-content: left;
        align-items: flex-start;
        font-size: 1rem;
        padding: 0 1rem;
        gap: 1rem;
    }

    .copy p,
    .copy p span,
    .copy a{
        text-align: left;
    }

    .one{
        margin-bottom: 10px;
    }
}

